--- a/src/pages/sell.html
+++ b/src/pages/sell.html
@@ -193,7 +193,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <span style="color: #000000">이용 고객 후기</span>
         </p>
         <p class="p22" style="letter-spacing: -0.5px; font-weight: 500">
-          <span style="color: #000000">실제로 방문해 이용한 고객들의 리뷰</span>
+          <span style="color: #000000">실제로 방문해 이용한 고객님들의 리뷰</span>
         </p>
       </div>
 
