--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
             오전10시~오후8시
           </p>
         </div>
-        <div class="button">
+        <div class="button" style="color: #f83aaa;" >
           <a class="p28" href="tel:0507-1496-0568"><img src="/src/img/pc_phone2.png" alt="전화기아이콘" height="26"/> 0507-1496-0568</a>
         </div>
       </div>
