--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
           </p>
         </div>
         <div class="button" >
-          <a class="p28" href="tel:0507-1496-0568" style="color: #f83aaa;"><img src="/src/img/pc_phone2.png" alt="전화기아이콘" height="26"/> 0507-1496-0568</a>
+          <a class="p28" href="tel:0507-1496-0568" style="color: #000000;"><img src="/src/img/pc_phone2.png" alt="전화기아이콘" height="26"/> 0507-1496-0568</a>
         </div>
       </div>
     </section>
