--- a/src/pages/sell.html
+++ b/src/pages/sell.html
@@ -226,18 +226,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </section>
     
 
-   <section id="main_footer">
+    <section id="main_footer">
       <div id="main_footer_div" class="padding">
         <div>
           <p
             class="p36"
-            style="color: white; font-weight: 600; margin-bottom: 40px"
+            style="color: white; font-weight: 600; margin-bottom: 15px"
           >
             고객센터
           </p>
           <p
-            class="p22"
-            style="color: white; font-weight: 500; line-height: 35px"
+            class="p21"
+            style="color: white; font-weight: 500; line-height: 25px"
           >
             천안시 서북구 두정중7길 1-12<br /><span
               style="text-decoration: underline"
@@ -246,8 +246,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             오전10시~오후8시
           </p>
         </div>
-        <div class="button">
-          <a class="p28" href="tel:0507-1496-0568">☎ 0507-1496-0568</a>
+        <div class="button" >
+          <a class="p22" href="tel:0507-1496-0568" style="color: #000000;"><img src="/src/img/pc_phone2.png" alt="전화기아이콘" height="17"/> 0507-1496-0568</a>
         </div>
       </div>
     </section>
