--- a/index.html
+++ b/index.html
@@ -134,12 +134,11 @@
             <div>
               <ul id="main_menu">
       
-                  <li><a href="/src/pages/buy.html">매입</a></li>
-                  <li><a href="/src/pages/sell.html">판매</a></li>
-      
-                <li>
-                  <a href="/src/pages/prepaid.html">알뜰/선불폰</a>
-                </li>
+            <li><a href="/src/pages/buy.html">매입</a></li>
+            <li><a href="/src/pages/sell.html">판매</a></li>
+            <li><a href="/src/pages/prepaid.html">알뜰/선불폰</a></li>
+            <li><a href="https://pf.kakao.com/_xeaKNG/chat/">카톡 채팅 상담</a></li>
+            <li><a href="https://talk.naver.com/ct/w5t762">네이버 톡톡 상담</a></li>
               </ul>
             </div>
           </div>
