--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
             <div>
               <ul id="main_menu">
       
-            <li><a href="/src/pages/buy.html">매입</a></li>
-            <li><a href="/src/pages/sell.html">판매</a></li>
+            <li><a href="/src/pages/buy.html">중고폰 매입</a></li>
+            <li><a href="/src/pages/sell.html">중고폰 판매</a></li>
             <li><a href="/src/pages/prepaid.html">알뜰/선불폰</a></li>
             <li><a href="https://pf.kakao.com/_xeaKNG/chat/">카톡 채팅 상담</a></li>
             <li><a href="https://talk.naver.com/ct/w5t762">네이버 톡톡 상담</a></li>
@@ -147,8 +147,8 @@
           <!-- 메뉴 목록 -->
           <nav id="pc_menu">
             <ul>
-              <li><a class="header__menu__text" href="/src/pages/buy.html">매입</a></li>
-               <li><a class="header__menu__text" href="/src/pages/sell.html">판매</a></li>
+              <li><a class="header__menu__text" href="/src/pages/buy.html">중고폰 매입</a></li>
+               <li><a class="header__menu__text" href="/src/pages/sell.html">중고폰 판매</a></li>
               <li><a class="header__menu__text" href="/src/pages/prepaid.html">알뜰/선불폰</a></li>
       
               <li
