--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://예쁜중고폰.com" />
-    <meta property="og:title" content="예쁜중고폰" />
+    <meta property="og:title" content="천안중고폰 | 예쁜중고폰" />
     <meta
       property="og:image"
       content="https://예쁜중고폰.com/src/img/ogimage.png"
@@ -15,7 +15,7 @@
       property="og:description"
       content="천안중고폰 최고가 매입, 최저가 판매, 선불폰, 알뜰폰, 예쁜중고폰"
     />
-    <meta property="og:site_name" content="예쁜중고폰" />
+    <meta property="og:site_name" content="천안중고폰 | 예쁜중고폰" />
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -26,7 +26,7 @@
     />
     <meta
       name="keywords"
-      content="천안중고폰, 천안, 중고폰, 매입, 판매, 매장, 알뜰폰, 선불폰, 아이폰, 수리, 갤럭시, 박스폰, 가개통, 자급제, "
+      content="천안중고폰, 천안, 중고폰, 매입, 판매, 매장, 알뜰폰, 선불폰, 아이폰, 수리, 갤럭시, 박스폰, 가개통, 자급제 "
     />
 
     <!-- Google Tag Manager -->
