--- a/src/pages/buy.html
+++ b/src/pages/buy.html
@@ -29,7 +29,7 @@
     />
     <meta
       name="keywords"
-      content="천안,중고폰,매입,아이폰,갤럭시,태블릿,박스폰,가개통,최고가,예쁜중고폰 "
+      content="천안,중고폰,매입,아이폰,갤럭시,태블릿,박스폰,가개통,워치,최고가 매입,예쁜중고폰 "
     />
     <title>중고폰 매입-예쁜중고폰</title>
     <link rel="stylesheet" href="/src/css/styles.css" />
