--- a/src/pages/buy.html
+++ b/src/pages/buy.html
@@ -18,7 +18,7 @@
       property="og:description"
       content="천안중고폰매입, 최고가 보장, 불필요한 차감 없이 명확한 안내, 천안 두정동 예쁜중고폰 "
     />
-    <meta property="og:site_name" content="예쁜중고폰" />
+    <meta property="og:site_name" content="천안중고폰 | 예쁜중고폰" />
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
