--- a/src/pages/sell.html
+++ b/src/pages/sell.html
@@ -18,7 +18,7 @@
       property="og:description"
       content="천안중고폰판매, 새것같은 중고폰 저렴하고 다양한 천안 두정동 예쁜중고폰"
     />
-    <meta property="og:site_name" content="예쁜중고폰" />
+    <meta property="og:site_name" content="천안중고폰 | 예쁜중고폰" />
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
