--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     />
     <meta
       name="keywords"
-      content="천안중고폰, 천안, 중고폰, 매입, 판매, 매장, 알뜰폰, 선불폰, 아이폰, 수리, 갤럭시, 박스폰, 가개통, 자급제 "
+      content="천안중고폰, 천안, 중고폰, 매입, 판매, 매장, 업체, 구매, 알뜰폰, 선불폰, 아이폰, 수리, 갤럭시, 박스폰, 가개통, 자급제 "
     />
 
     <!-- Google Tag Manager -->
