--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="canonical" href="https://예쁜중고폰.com/" />
+
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://예쁜중고폰.com" />
     <meta property="og:title" content="천안중고폰 | 예쁜중고폰" />
