--- a/src/pages/buy.html
+++ b/src/pages/buy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="canonical" href="https://예쁜중고폰.com/src/pages/buy.html" />
+    <link rel="canonical" href="https://예쁜중고폰.com/src/pages/buy" />
     
     <meta property="og:type" content="website" />
     <meta
