--- a/src/pages/buy.html
+++ b/src/pages/buy.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://예쁜중고폰.com/src/pages/buy.html"
+      content="https://예쁜중고폰.com/src/pages/buy"
     />
     <meta property="og:title" content="중고폰 매입-예쁜중고폰" />
     <meta
