--- a/src/pages/prepaid.html
+++ b/src/pages/prepaid.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://예쁜중고폰.com/src/pages/prepaid.html"
+      content="https://예쁜중고폰.com/src/pages/prepaid"
     />
     <meta property="og:title" content="알뜰폰 선불폰-예쁜중고폰" />
     <meta
