--- a/src/pages/sell.html
+++ b/src/pages/sell.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://예쁜중고폰.com/src/pages/sell.html"
+      content="https://예쁜중고폰.com/src/pages/sell"
     />
     <meta property="og:title" content="중고폰 판매-예쁜중고폰" />
     <meta
