--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <meta
       property="og:description"
-      content="천안중고폰 최고가 매입, 최저가 판매, 선불폰, 알뜰폰, 예쁜중고폰"
+      content="천안중고폰매입, 천안중고폰판매, 천안선불폰, 천안알뜰폰, 최고가 매입, 최저가 판매, 예쁜중고폰"
     />
     <meta property="og:site_name" content="천안중고폰 | 예쁜중고폰" />
     <meta property="og:locale" content="ko_KR" />
@@ -24,7 +24,7 @@
     <meta name="title" content="천안중고폰 | 예쁜중고폰" />
     <meta
       name="description"
-      content="천안중고폰 최고가 매입, 최저가 판매, 선불폰, 알뜰폰, 예쁜중고폰"
+      content="천안중고폰매입, 천안중고폰판매, 천안선불폰, 천안알뜰폰, 최고가 매입, 최저가 판매, 예쁜중고폰"
     />
     <meta
       name="keywords"
