--- a/src/pages/prepaid.html
+++ b/src/pages/prepaid.html
@@ -11,7 +11,7 @@
       property="og:url"
       content="https://예쁜중고폰.com/src/pages/prepaid"
     />
-    <meta property="og:title" content="알뜰폰 선불폰-예쁜중고폰" />
+    <meta property="og:title" content="천안 선불폰 알뜰폰" />
     <meta
       property="og:image"
       content="https://예쁜중고폰.com/src/img/ogimage.png"
@@ -24,7 +24,7 @@
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta name="title" content="알뜰폰 선불폰-예쁜중고폰" />
+    <meta name="title" content="천안 선불폰 알뜰폰" />
     <meta
       name="description"
       content="알뜰폰, 선불폰 주말에도 즉시 개통 가능한 천안 두정동 예쁜중고폰"
@@ -33,7 +33,7 @@
       name="keywords"
       content="천안,선불폰,알뜰폰,개통,데이터,통화,무제한,KT,LG,SKT,앤텔레콤,예쁜중고폰"
     />
-    <title>알뜰폰 선불폰-예쁜중고폰</title>
+    <title>천안 선불폰 알뜰폰</title>
     <link rel="stylesheet" href="/src/css/styles.css" />
 
     <link rel="icon" href="/src/img/favicon.ico" type="image/x-icon" />
