--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://예쁜중고폰.com" />
-    <meta property="og:title" content="천안중고폰 | 예쁜중고폰" />
+    <meta property="og:title" content="예쁜중고폰 ㅣ 천안중고폰 ㅣ 천안중고폰매입판매 ㅣ 천안선불폰" />
     <meta
       property="og:image"
       content="https://예쁜중고폰.com/src/img/ogimage.png"
     />
     <meta
       property="og:description"
-      content="천안중고폰매입, 천안중고폰판매, 천안선불폰, 천안알뜰폰, 최고가 매입, 최저가 판매, 예쁜중고폰"
+      content="예쁜중고폰, 천안중고폰, 천안중고폰판매, 천안중고폰매입, 천안선불폰, 천안알뜰폰, 중고 핸드폰 최저가 판매, 중고 핸드폰 최고가 매입"
     />
-    <meta property="og:site_name" content="천안중고폰 | 예쁜중고폰" />
+    <meta property="og:site_name" content="예쁜중고폰" />
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta name="title" content="천안중고폰 | 예쁜중고폰" />
+    <meta name="title" content="예쁜중고폰 ㅣ 천안중고폰 ㅣ 천안중고폰매입판매 ㅣ 천안선불폰" />
     <meta
       name="description"
-      content="천안중고폰매입, 천안중고폰판매, 천안선불폰, 천안알뜰폰, 최고가 매입, 최저가 판매, 예쁜중고폰"
+      content="예쁜중고폰, 천안중고폰, 천안중고폰판매, 천안중고폰매입, 천안선불폰, 천안알뜰폰, 중고 핸드폰 최저가 판매, 중고 핸드폰 최고가 매입"
     />
     <meta
       name="keywords"
-      content="천안중고폰, 천안, 중고폰, 매입, 판매, 매장, 업체, 구매, 알뜰폰, 선불폰, 아이폰, 수리, 갤럭시, 박스폰, 가개통, 자급제 "
+      content="천안중고폰, 천안중고폰판매, 천안중고폰매입, 천안선불폰, 천안알뜰폰, 핸드폰 최고가 매입, 핸드폰 최저가 판매, 핸드폰수리, 갤럭시, 아이폰, 박스폰, 가개통, 자급제, 선불폰, 중고핸드폰업체, 중고핸드폰"
     />
 
     <!-- Google Tag Manager -->
@@ -49,7 +49,7 @@
 
     
 
-    <title>천안중고폰 | 예쁜중고폰</title>
+    <title>예쁜중고폰 ㅣ 천안중고폰 ㅣ 천안중고폰매입판매 ㅣ 천안선불폰</title>
     <link rel="stylesheet" href="/src/css/styles.css" />
     <link rel="stylesheet" href="/src/css/index.css" />
     <link rel="icon" href="/src/img/favicon.ico" type="image/x-icon" />
