--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <meta
       property="og:description"
-      content="예쁜중고폰, 천안중고폰, 천안중고폰판매, 천안중고폰매입, 천안선불폰, 천안알뜰폰, 중고 핸드폰 최저가 판매, 중고 핸드폰 최고가 매입"
+      content="예쁜중고폰, 천안중고폰, 천안중고폰판매, 천안중고폰매입, 천안선불폰, 천안알뜰폰, 중고 핸드폰 최저가 판매, 중고 핸드폰 최고가 매입, 두정동중고폰"
     />
     <meta property="og:site_name" content="예쁜중고폰" />
     <meta property="og:locale" content="ko_KR" />
@@ -24,11 +24,11 @@
     <meta name="title" content="예쁜중고폰 ㅣ 천안중고폰 ㅣ 천안중고폰매입판매 ㅣ 천안선불폰" />
     <meta
       name="description"
-      content="예쁜중고폰, 천안중고폰, 천안중고폰판매, 천안중고폰매입, 천안선불폰, 천안알뜰폰, 중고 핸드폰 최저가 판매, 중고 핸드폰 최고가 매입"
+      content="예쁜중고폰, 천안중고폰, 천안중고폰판매, 천안중고폰매입, 천안선불폰, 천안알뜰폰, 중고 핸드폰 최저가 판매, 중고 핸드폰 최고가 매입, 두정동중고폰"
     />
     <meta
       name="keywords"
-      content="천안중고폰, 천안중고폰판매, 천안중고폰매입, 천안선불폰, 천안알뜰폰, 핸드폰 최고가 매입, 핸드폰 최저가 판매, 핸드폰수리, 갤럭시, 아이폰, 박스폰, 가개통, 자급제, 선불폰, 중고핸드폰업체, 중고핸드폰"
+      content="천안중고폰, 천안중고폰판매, 천안중고폰매입, 천안선불폰, 천안알뜰폰, 핸드폰 최고가 매입, 핸드폰 최저가 판매, 핸드폰수리, 갤럭시, 아이폰, 박스폰, 가개통, 자급제, 선불폰, 중고핸드폰업체, 중고핸드폰, 두정동중고폰"
     />
 
     <!-- Google Tag Manager -->
