--- a/src/pages/buy.html
+++ b/src/pages/buy.html
@@ -11,7 +11,7 @@
       property="og:url"
       content="https://예쁜중고폰.com/src/pages/buy"
     />
-    <meta property="og:title" content="천안 중고폰 매입" />
+    <meta property="og:title" content="천안 중고폰 매입 - 예쁜중고폰" />
     <meta
       property="og:image"
       content="https://예쁜중고폰.com/src/img/ogimage.png"
@@ -24,14 +24,14 @@
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta name="title" content="천안 중고폰 매입" />
+    <meta name="title" content="천안 중고폰 매입 - 예쁜중고폰" />
     <meta
       name="description"
       content="천안중고폰매입, 최고가 보장, 불필요한 차감 없이 명확한 안내, 천안 두정동 예쁜중고폰 "
     />
     <meta
       name="keywords"
-      content="천안,중고폰,매입,아이폰,갤럭시,태블릿,박스폰,가개통,워치,최고가 매입,예쁜중고폰 "
+      content="천안,중고폰,매입,아이폰,갤럭시,태블릿,박스폰,가개통,워치,최고가 매입,두정동,예쁜중고폰 "
     />
     <title>천안 중고폰 매입</title>
     <link rel="stylesheet" href="/src/css/styles.css" />
