--- a/src/pages/buy.html
+++ b/src/pages/buy.html
@@ -51,6 +51,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-M878XSQR');</script>
 <!-- End Google Tag Manager -->
+
+
+ <div id="header"></div>
     
   </head>
 
@@ -58,8 +61,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   
   <body>
-
-    <div id="header"></div>
 
 
     <!-- Google Tag Manager (noscript) -->
@@ -269,5 +270,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       }
     </script>
     <script src="/src/js/script.js" defer></script>
+
+
+
+	<!------네이버 애널리틱스------->
+<script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
+<script type="text/javascript">
+if(!wcs_add) var wcs_add = {};
+wcs_add["wa"] = "38801fbcf872f2";
+if(window.wcs) {
+wcs_do();
+}
+</script>
+	<!------네이버 애널리틱스------->
+
+    
   </body>
 </html>
