--- a/src/pages/prepaid.html
+++ b/src/pages/prepaid.html
@@ -50,6 +50,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-M878XSQR');</script>
 <!-- End Google Tag Manager -->
+
+
+    <div id="header"></div>
     
   </head>
 
@@ -57,7 +60,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   
   <body>
-    <div id="header"></div>
+
 
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M878XSQR"
@@ -166,5 +169,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       }
     </script>
     <script src="/src/js/script.js" defer></script>
+
+	<!------네이버 애널리틱스------->
+<script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
+<script type="text/javascript">
+if(!wcs_add) var wcs_add = {};
+wcs_add["wa"] = "38801fbcf872f2";
+if(window.wcs) {
+wcs_do();
+}
+</script>
+	<!------네이버 애널리틱스------->
+    
   </body>
 </html>
