--- a/index.html
+++ b/index.html
@@ -52,23 +52,13 @@
     <title>예쁜중고폰 ㅣ 천안중고폰 ㅣ 천안중고폰매입판매 ㅣ 천안선불폰</title>
     <link rel="stylesheet" href="/src/css/styles.css" />
     <link rel="stylesheet" href="/src/css/index.css" />
-    <link rel="icon" href="/src/img/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/src/img/favicon2.ico" type="image/x-icon" />
     <link
       href="https://webfontworld.github.io/SCoreDream/SCoreDream.css"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="/src/js/jquery.min.js"></script>
-
-
-
-
- <span itemscope="" itemtype="http://schema.org/Organization">
-<link itemprop="url" href="https://예쁜중고폰.com">
-<a itemprop="sameAs" href="https://blog.naver.com/prettyphone93"></a>
-<a itemprop="sameAs" href="https://talk.naver.com/ct/w5t762"></a>
-</span>
-
 
 
 
