--- a/src/pages/prepaid.html
+++ b/src/pages/prepaid.html
@@ -36,7 +36,7 @@
     <title>천안 선불폰 알뜰폰 - 예쁜중고폰</title>
     <link rel="stylesheet" href="/src/css/styles.css" />
 
-    <link rel="icon" href="/src/img/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/src/img/favicon2.ico" type="image/x-icon" />
     <link
       href="https://webfontworld.github.io/SCoreDream/SCoreDream.css"
       rel="stylesheet"
