--- a/src/pages/buy.html
+++ b/src/pages/buy.html
@@ -274,6 +274,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 
+	<!------네이버 애널리틱스------->
+<script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
+<script type="text/javascript">
+if(!wcs_add) var wcs_add = {};
+wcs_add["wa"] = "38801fbcf872f2";
+if(window.wcs) {
+wcs_do();
+}
+</script>
+	<!------네이버 애널리틱스------->
 
     
   </body>
