--- a/index.html
+++ b/index.html
@@ -299,17 +299,17 @@
       <div id="reviews" class="container">
         <div class="box">
           <div class="image-container">
-            <img src="/src/img/sec1/buy.png" alt="sec 2-1" />
+            <img src="/src/img/sec1/buy.png" alt="천안중고폰매입, 액정파손, 화면불량, 기능불량 상관없이 최고가 매입, 가개통/박스폰 환영, 즉시 입금" />
           </div>
         </div>
         <div class="box">
           <div class="image-container">
-            <img src="/src/img/sec1/sell.png" alt="sec 2-2" />
+            <img src="/src/img/sec1/sell.png" alt="천안중고폰판매, 기능 점검 및 소독 마친 중고휴대폰 30~40대 진열, 구매 후 문제시 환불" />
           </div>
         </div>
         <div class="box">
           <div class="image-container">
-            <img src="/src/img/sec1/prepaid.png" alt="sec 2-3" />
+            <img src="/src/img/sec1/prepaid.png" alt="천안알뜰폰 천안선불폰 주말에도 즉시 개통, 음성/데이터/통화 무제한 월 39,600원" />
           </div>
         </div>
       </div>
@@ -334,7 +334,7 @@
         <!-- Box 2 -->
         <div>
           <img src="/src/img/sec1/vsto.png" alt="예쁜중고폰과 타 천안중고폰 업체
-          비교" style="width: 95%" margin: auto; display: block; />
+          비교, 예쁜중고폰은 무조건 즉시 입금, 넓은 주차장, 불필요한 차감없임, 30~40대 다양하게 진열 후 판매, 구매하신 후 문제시 100% 환불" style="width: 95%" margin: auto; display: block; />
         </div>
       </div>
     </section>
@@ -451,7 +451,7 @@
         <div class="box">
           <img
             src="/src/img/sec1/pic1.png"
-            alt="예쁜중고폰 판매 상품 진열 쇼케이스"
+            alt="천안 두정동 예쁜중고폰 판매 상품 진열 쇼케이스"
             style="width: 100%"
           />
         </div>
@@ -460,7 +460,7 @@
         <div class="box">
           <img
             src="/src/img/sec1/pic2.png"
-            alt="예쁜중고폰 내부 인테리어"
+            alt="천안 두정동 예쁜중고폰 내부 인테리어"
             style="width: 100%"
           />
         </div>
@@ -469,7 +469,7 @@
         <div class="box">
           <img
             src="/src/img/sec1/pic3.png"
-            alt="주차장 입구"
+            alt="천안 두정동 주차장 입구"
             style="width: 100%"
           />
         </div>
@@ -478,7 +478,7 @@
         <div class="box">
           <img
             src="/src/img/sec1/pic4.png"
-            alt="넓은 주차장 모습"
+            alt="천안 두정동 예쁜중고폰 넓은 주차장 모습"
             style="width: 100%"
           />
         </div>
