--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
         <!-- Box 3 -->
         <div class="box">
           <img
-            src="/src/img/sec1/pic3.png"
+            src="/src/img/sec1/pic3.jpg"
             alt="천안 두정동 주차장 입구"
             style="width: 100%"
           />
