--- a/src/pages/buy.html
+++ b/src/pages/buy.html
@@ -119,6 +119,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
 
       <div class="container">
+	    <div class="radius-text p20">
+          <img src="/src/img/main/check.png" alt="checkbox1" />
+          <p>흔하지 않은 무조건 즉시 입금 해주는 곳!</p>
+        </div>
         <div class="radius-text p20">
           <img src="/src/img/main/check.png" alt="checkbox1" />
           <p>액정 파손, LCD/기능 불량 등 상태가 나빠도 OK</p>
