--- a/src/pages/sell.html
+++ b/src/pages/sell.html
@@ -118,6 +118,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
 
       <div class="container">
+	      <div class="radius-text p20">
+          <img src="/src/img/main/check.png" alt="checkbox1" />
+          <p>매일 약 40대 정말 다양한 핸드폰을 진열하고 있는 곳</p>
+        </div>   
         <div class="radius-text p20">
           <img src="/src/img/main/check.png" alt="checkbox1" />
           <p>상태 점검, 소독을 마친 제품만 진열해요</p>
