--- a/src/pages/sell.html
+++ b/src/pages/sell.html
@@ -120,7 +120,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="container">
 	      <div class="radius-text p20">
           <img src="/src/img/main/check.png" alt="checkbox1" />
-          <p>매일 약 40대 정말 다양한 핸드폰을 진열하고 있는 곳</p>
+          <p>매일 약 40대 정말 다양한 중고폰을 진열하고 있는 곳</p>
         </div>   
         <div class="radius-text p20">
           <img src="/src/img/main/check.png" alt="checkbox1" />
