--- a/index.html
+++ b/index.html
@@ -299,17 +299,17 @@
       <div id="reviews" class="container">
         <div class="box">
           <div class="image-container">
-            <img src="/src/img/sec1/buy.png" alt="천안중고폰매입, 액정파손, 화면불량, 기능불량 상관없이 최고가 매입, 가개통/박스폰 환영, 즉시 입금" />
+            <img src="/src/img/sec1/buy.png" alt="천안 중고폰 매입, 중고 휴대폰 액정 파손 깨짐, 화면불량, 기능불량 상관없이 최고가 매입, 가개통 및 박스폰 환영, 현장 즉시 입금" />
           </div>
         </div>
         <div class="box">
           <div class="image-container">
-            <img src="/src/img/sec1/sell.png" alt="천안중고폰판매, 기능 점검 및 소독 마친 중고휴대폰 30~40대 진열, 구매 후 문제시 환불" />
+            <img src="/src/img/sec1/sell.png" alt="천안 중고폰 판매, 기능 점검 및 소독 마친 중고휴대폰 30~40대 진열, 구매 후 문제시 환불 약속" />
           </div>
         </div>
         <div class="box">
           <div class="image-container">
-            <img src="/src/img/sec1/prepaid.png" alt="천안알뜰폰 천안선불폰 주말에도 즉시 개통, 음성/데이터/통화 무제한 월 39,600원" />
+            <img src="/src/img/sec1/prepaid.png" alt="천안 알뜰폰 천안 선불폰 주말 언제나 즉시 개통 가능, 음성/데이터/통화 무제한 월 36,300원" />
           </div>
         </div>
       </div>
@@ -333,8 +333,8 @@
       <div class="container-two">
         <!-- Box 2 -->
         <div>
-          <img src="/src/img/sec1/vsto.png" alt="예쁜중고폰과 타 천안중고폰 업체
-          비교, 예쁜중고폰은 무조건 즉시 입금, 넓은 주차장, 불필요한 차감없임, 30~40대 다양하게 진열 후 판매, 구매하신 후 문제시 100% 환불" style="width: 95%" margin: auto; display: block; />
+          <img src="/src/img/sec1/vsto.png" alt="예쁜중고폰과 타 천안 중고폰 업체의 비교 요약, 
+          예쁜중고폰은 무조건 즉시 입금, 넓은 주차장 완비, 불필요한 차감없임, 40~50대 다양하게 진열 후 판매, 구매하신 후 문제시 100% 환불" style="width: 95%" margin: auto; display: block; />
         </div>
       </div>
     </section>
@@ -451,7 +451,7 @@
         <div class="box">
           <img
             src="/src/img/sec1/pic1.png"
-            alt="천안 두정동 예쁜중고폰 판매 상품 진열 쇼케이스"
+            alt="천안 두정동 예쁜중고폰 중고 휴대폰 판매 상품 진열 쇼케이스 모습"
             style="width: 100%"
           />
         </div>
@@ -460,7 +460,7 @@
         <div class="box">
           <img
             src="/src/img/sec1/pic2.png"
-            alt="천안 두정동 예쁜중고폰 내부 인테리어"
+            alt="천안 중고폰 예쁜중고폰 내부 인테리어 모습"
             style="width: 100%"
           />
         </div>
@@ -469,7 +469,7 @@
         <div class="box">
           <img
             src="/src/img/sec1/pic3.jpg"
-            alt="천안 두정동 주차장 입구"
+            alt="예쁜중고폰 주차장 입구 모습"
             style="width: 100%"
           />
         </div>
@@ -478,7 +478,7 @@
         <div class="box">
           <img
             src="/src/img/sec1/pic4.png"
-            alt="천안 두정동 예쁜중고폰 넓은 주차장 모습"
+            alt="천안시 두정동 예쁜중고폰 넓은 주차장 사진"
             style="width: 100%"
           />
         </div>
@@ -506,7 +506,7 @@
           </p>
         </div>
         <div class="button" >
-          <a class="p22" href="tel:0507-1496-0568" style="color: #000000;"><img src="/src/img/pc_phone2.png" alt="전화기아이콘" height="17"/> 0507-1496-0568</a>
+          <a class="p22" href="tel:0507-1496-0568" style="color: #000000;"><img src="/src/img/pc_phone2.png" alt="전화기 아이콘" height="17"/> 0507-1496-0568</a>
         </div>
       </div>
     </section>
