--- a/src/pages/prepaid.html
+++ b/src/pages/prepaid.html
@@ -100,7 +100,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <span style="color: #000000">요금제 안내</span>
         </p>
         <p class="p22" style="letter-spacing: -0.5px; font-weight: 500">
-          <span style="color: #000000">주말 개통 가능! 신분증 지참해서 방문해주세요</span>
+          <span style="color: #000000">꼭 실물 신분증 지참해서 방문해주세요</span>
         </p>
       </div>
 
@@ -108,8 +108,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- Box 1 -->
         <div class="box">
           <img
-            src="/src/img/prepaid/lgprice.jpg"
-            alt="알뜰/선불폰 앤텔레콤 LG망 요금제"
+            src="/src/img/prepaid/tariff1.png"
+            alt="천안 선불폰 통신3사 요금제표"
             style="width: 100%"
           />
         </div>
@@ -117,11 +117,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- Box 2 -->
         <div class="box">
           <img
-            src="/src/img/prepaid/ktprice.jpg"
-            alt="알뜰/선불폰 앤텔레콤 kt망 요금제"
+            src="/src/img/prepaid/tariff2.png"
+            alt="천안 알뜰 후불폰 SKT, KT 요금제표"
             style="width: 100%"
           />
         </div>
+
+        <div class="box">
+          <img
+            src="/src/img/prepaid/tariff3.png"
+            alt="천안 알뜰 후불폰 KT, LGT 요금제표""
+            style="width: 100%"
+          />
+        </div>		
 
       </div>
     </section>
