--- a/src/pages/prepaid.html
+++ b/src/pages/prepaid.html
@@ -108,28 +108,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- Box 1 -->
         <div class="box">
           <img
-            src="/src/img/prepaid/tariff1.png"
-            alt="천안 선불폰 통신3사 요금제표"
+            src="/src/img/prepaid/readphone.png"
+            alt="천안 선불폰 알뜰폰 각종 요금제표"
             style="width: 100%"
           />
         </div>
 
-        <!-- Box 2 -->
-        <div class="box">
-          <img
-            src="/src/img/prepaid/tariff2.png"
-            alt="천안 알뜰 후불폰 SKT, KT 요금제표"
-            style="width: 100%"
-          />
-        </div>
-
-        <div class="box">
-          <img
-            src="/src/img/prepaid/tariff3.png"
-            alt="천안 알뜰 후불폰 KT, LGT 요금제표""
-            style="width: 100%"
-          />
-        </div>		
 
       </div>
     </section>
