--- a/src/pages/prepaid.html
+++ b/src/pages/prepaid.html
@@ -103,23 +103,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <span style="color: #000000">꼭 실물 신분증 지참해서 방문해주세요</span>
         </p>
       </div>
-
-        <div class="container">
-        <!-- Box 1 -->
-        <div class="box">
-          <img
-            src="/src/img/prepaid/readphone.png"
-            alt="천안 선불폰 알뜰폰 각종 요금제표"
-            style="width: 100%"
-          />
-        </div>
-
-
-      </div>
     </section>
 
-
-
+      <section class="padding-three"> 
+      <div class="container-three" >
+       <div>
+       <img src="/src/img/prepaid/readphone.png" alt="천안 선불폰 천안 알뜰폰 각종 추천 요금제표" style="max-width: 100%" margin: auto; display: block;  />
+       </div>
+      </div>
+    </section>
     
 
    <section id="main_footer">
