--- a/src/pages/prepaid.html
+++ b/src/pages/prepaid.html
@@ -105,7 +105,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
 
    <div class="container-two">
+	   <div>
            <img src="/src/img/prepaid/readphone.png" alt="천안 선불폰 천안 알뜰폰 각종 추천 요금제표" style="max-width: 100%" margin: auto; display: block;  />
+		      </div>   
       </div>
 
     </section>
