--- a/src/pages/prepaid.html
+++ b/src/pages/prepaid.html
@@ -104,7 +104,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </p>
       </div>
 
-   <div class="container-two">
+   <div class="container-three">
 	   <div>
            <img src="/src/img/prepaid/readphone.png" alt="천안 선불폰 천안 알뜰폰 각종 추천 요금제표" style="max-width: 100%" margin: auto; display: block;  />
 		      </div>   
