--- a/src/pages/prepaid.html
+++ b/src/pages/prepaid.html
@@ -90,24 +90,27 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <section id="gray-bg" class="padding">
       <div class="title-box container">
-        <p class="p36">
-          <span style="color: #000000; font-weight: 600"
-            >예쁜중고폰에 단골이 많은 이유</span
-          ><br /><br />
-          <span style="color: #000000">이미 </span
-          ><span style="color: #f83aaa; font-weight: 600">많은 고객님들이</span>
-          <span style="color: #000000">
-            헛걸음 후 <br />
-            최종 선택하신 곳이에요</span
-          >
+        <p
+          class="p36"
+          style="
+            line-height: 21px;
+            letter-spacing: -0.5px;
+            font-weight: 600;
+            margin-bottom: 40px;
+          "
+        >
+          <span style="color: #f83aaa">알뜰폰 선불폰</span>
+          <span style="color: #000000">요금제 안내</span>
+        </p>
+        <p class="p22" style="letter-spacing: -0.5px; font-weight: 500">
+          <span style="color: #000000">꼭 실물 신분증 지참해서 방문해주세요</span>
         </p>
       </div>
 
       <div class="container-two">
         <!-- Box 2 -->
         <div>
-          <img src="/src/img/sec1/vsto.png" alt="예쁜중고폰과 타 천안 중고폰 업체의 비교 요약, 
-          예쁜중고폰은 무조건 즉시 입금, 넓은 주차장 완비, 불필요한 차감없임, 40~50대 다양하게 진열 후 판매, 구매하신 후 문제시 100% 환불" style="width: 95%" margin: auto; display: block; />
+          <img src="/src/img/prepaid/readphone.png" alt="천안 선불폰 천안 알뜰폰 각종 추천 요금제표" style="width: 95%" margin: auto; display: block; />
         </div>
       </div>
     </section>
