--- a/index.html
+++ b/index.html
@@ -447,7 +447,17 @@
       </div>
 
       <div class="container">
-        <!-- Box 1 -->
+	      
+	             <!-- Box 1 --> 
+        <div class="box">
+          <img
+            src="/src/img/sec1/pic5.png"
+            alt="천안 중고폰 성지, 손님이 많은 매장"
+            style="width: 100%"
+          />
+        </div>
+
+	             <!-- Box 2 --> 
         <div class="box">
           <img
             src="/src/img/sec1/pic1.png"
@@ -456,7 +466,7 @@
           />
         </div>
 
-        <!-- Box 2 -->
+        <!-- Box 3 -->
         <div class="box">
           <img
             src="/src/img/sec1/pic2.png"
@@ -465,20 +475,11 @@
           />
         </div>
 
-        <!-- Box 3 -->
+        <!-- Box 4 -->
         <div class="box">
           <img
             src="/src/img/sec1/pic3.jpg"
             alt="예쁜중고폰 주차장 입구 모습"
-            style="width: 100%"
-          />
-        </div>
-
-        <!-- Box 4 -->
-        <div class="box">
-          <img
-            src="/src/img/sec1/pic4.png"
-            alt="천안시 두정동 예쁜중고폰 넓은 주차장 사진"
             style="width: 100%"
           />
         </div>
