--- a/src/pages/sell.html
+++ b/src/pages/sell.html
@@ -120,7 +120,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="container">
 	      <div class="radius-text p20">
           <img src="/src/img/main/check.png" alt="checkbox1" />
-          <p>약 40대, 거의 최다 기종 진열하고 있는 곳</p>
+          <p>약 100대, 거의 최다 기종 진열하고 있는 곳</p>
         </div>   
         <div class="radius-text p20">
           <img src="/src/img/main/check.png" alt="checkbox1" />
@@ -136,7 +136,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
         <div class="radius-text p20">
           <img src="/src/img/main/check.png" alt="checkbox1" />
-          <p>구매 후 문제 발생시 교환이나 환불 가능해요</p>
+          <p>구매하신 후 문제발생시 1개월간 교환/환불 보장!</p>
+        </div>
+                 <div class="radius-text p20">
+          <img src="/src/img/main/check.png" alt="checkbox1" />
+          <p>구매하시면 필름과 케이스 증정 이벤트</p>
         </div>
       </div>
     </section>
