--- a/src/pages/sell.html
+++ b/src/pages/sell.html
@@ -140,7 +140,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
                  <div class="radius-text p20">
           <img src="/src/img/main/check.png" alt="checkbox1" />
-          <p>구매하시면 필름과 케이스 증정 이벤트</p>
+          <p>휴대폰 구매시 필름과 케이스 증정👌</p>
         </div>
       </div>
     </section>
