--- a/src/pages/prepaid.html
+++ b/src/pages/prepaid.html
@@ -107,7 +107,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </p>
       </div>
 
-      <div class="title-box container">
+      <div>
         <!-- Box 2 -->
         <div>
           <img src="/src/img/prepaid/readphone.png" alt="천안 선불폰 천안 알뜰폰 각종 추천 요금제표" style="width: 100%" margin: auto; display: block; />
