--- a/src/pages/prepaid.html
+++ b/src/pages/prepaid.html
@@ -106,14 +106,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <span style="color: #000000">꼭 실물 신분증 지참해서 방문해주세요</span>
         </p>
       </div>
-
-      <div>
+    </section>
+	  
+      <div class="padding-two">
         <!-- Box 2 -->
         <div>
           <img src="/src/img/prepaid/readphone.png" alt="천안 선불폰 천안 알뜰폰 각종 추천 요금제표" style="width: 100%" margin: auto; display: block; />
         </div>
       </div>
-    </section>
+
 
 
 	  <!--------------------구분--------------------->
