--- a/src/pages/prepaid.html
+++ b/src/pages/prepaid.html
@@ -88,7 +88,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </section>
 
 
-    <section id="gray-bg" class="padding">
+    <section id="gray-bg" class="padding-t">
       <div class="title-box container">
         <p
           class="p36"
@@ -108,7 +108,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
     </section>
 
-	    <section class="padding-two">
+	    <section class="padding-b">
       <div class="container-two">
         <!-- Box 2 -->
         <div>
