--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
               <li
                 style="
                   border-radius: 16px;
-                  border: 1px solid #f83aaa;
+                  border: 1px solid #F24C7B;
                   padding: 6px 20px;
-                  background-color: #f83aaa;
+                  background-color: #F24C7B;
                     margin-top: 20px;
                   margin-right: 12px;
                 ">
@@ -193,7 +193,7 @@
       if (window.scrollY > 91) {
         headerBackground.style.backgroundColor = "white";
         headerTexts.forEach(text => {
-          text.style.color = "#f83aaa";
+          text.style.color = "#F24C7B";
     
           mobileLogo.src = "./src/img/callbutton.png";
           mobileMenu.src = "./src/img/menu_pink.png";
@@ -251,9 +251,9 @@
             letter-spacing: -0.5px;
           "
         >
-          <span style="color: #f83aaa; font-weight: 500">최고가</span>
+          <span style="color: #F24C7B; font-weight: 500">최고가</span>
           <span style="font-weight: 200">매입</span>
-          <span style="color: #f83aaa; font-weight: 500">최저가</span>
+          <span style="color: #F24C7B; font-weight: 500">최저가</span>
           <span style="font-weight: 200">판매</span>
         </p>
         <p
@@ -286,7 +286,7 @@
             margin-bottom: 40px;
           "
         >
-          <span style="color: #f83aaa">예쁜중고폰</span>
+          <span style="color: #F24C7B">예쁜중고폰</span>
           <span style="color: #000000">서비스 안내</span>
         </p>
         <p class="p22" style="letter-spacing: -0.5px; font-weight: 500">
@@ -322,7 +322,7 @@
             >예쁜중고폰에 단골이 많은 이유</span
           ><br /><br />
           <span style="color: #000000">이미 </span
-          ><span style="color: #f83aaa; font-weight: 600">많은 고객님들이</span>
+          ><span style="color: #F24C7B; font-weight: 600">많은 고객님들이</span>
           <span style="color: #000000">
             헛걸음 후 <br />
             최종 선택하신 곳이에요</span
@@ -342,7 +342,7 @@
     <section id="reasons" class="padding">
       <div class="title-box container">
         <p class="p36">
-          천안 중고폰 매장<br /><span style="color: #f83aaa; font-weight: 600"
+          천안 중고폰 매장<br /><span style="color: #F24C7B; font-weight: 600"
             >직접 비교</span
           >해보고 적었어요
         </p>
@@ -438,7 +438,7 @@
             margin-bottom: 40px;
           "
         >
-          <span style="color: #f83aaa">예쁜중고폰</span>
+          <span style="color: #F24C7B">예쁜중고폰</span>
           <span style="color: #000000">매장 인테리어</span>
         </p>
         <p class="p22" style="letter-spacing: -0.5px; font-weight: 500">
