--- a/src/pages/prepaid.html
+++ b/src/pages/prepaid.html
@@ -99,7 +99,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             margin-bottom: 40px;
           "
         >
-          <span style="color: #f83aaa">알뜰폰 선불폰</span>
+          <span style="color: #F24C7B">알뜰폰 선불폰</span>
           <span style="color: #000000">요금제 안내</span>
         </p>
         <p class="p22" style="letter-spacing: -0.5px; font-weight: 500">
