--- a/src/pages/sell.html
+++ b/src/pages/sell.html
@@ -99,7 +99,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <span
             style="
               color: white;
-              background-color: #f83aaa;
+              background-color: #F24C7B;
               padding: 6px 6px 2px 6px;
               font-weight: 800;
             "
@@ -160,7 +160,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           "
         >
           <span style="color: #000000">예쁜중고폰</span>
-          <span style="color: #f83aaa">다양한 기종 보유</span>
+          <span style="color: #F24C7B">다양한 기종 보유</span>
         </p>
         <p class="p22" style="letter-spacing: -0.5px; font-weight: 500">
           <span style="color: #000000">직접 만져보고 비교 후 구매하세요</span>
@@ -201,7 +201,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             margin-bottom: 40px;
           "
         >
-          <span style="color: #f83aaa">예쁜중고폰</span>
+          <span style="color: #F24C7B">예쁜중고폰</span>
           <span style="color: #000000">이용 고객 후기</span>
         </p>
         <p class="p22" style="letter-spacing: -0.5px; font-weight: 500">
