--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     
 
-    <title>천안중고폰 매입 판매 ㅣ 선불폰 알뜰폰 ㅣ 예쁜중고폰</title>
+    <title>천안중고폰</title>
     <link rel="stylesheet" href="/src/css/styles.css" />
     <link rel="stylesheet" href="/src/css/index.css" />
     <link rel="icon" href="/src/img/favicon2.ico" type="image/x-icon" />
