--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="canonical" href="https://xn--299am38ap8d3qdvts.com/" />
 <meta property="og:type" content="website" />
 <meta property="og:locale" content="ko_KR" />
-<meta property="og:url" content="https://예쁜중고폰.com" />
+<meta property="og:url" content="https://xn--299am38ap8d3qdvts.com/" />
 <meta property="og:title" content="천안중고폰" />
 <meta property="og:description" content="천안중고폰 매입 즉시 입금, 판매 문제시 환불, 가개통/박스폰 매입, 선불폰, 알뜰폰, 천안 두정동 예쁜중고폰."/>
 <meta property="og:site_name" content="천안중고폰" />
