--- a/src/pages/buy.html
+++ b/src/pages/buy.html
@@ -4,36 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="canonical" href="https://예쁜중고폰.com/src/pages/buy" />
-    
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://예쁜중고폰.com/src/pages/buy"
-    />
-    <meta property="og:title" content="천안 중고폰 매입 - 예쁜중고폰" />
-    <meta
-      property="og:image"
-      content="https://예쁜중고폰.com/src/img/ogimage.png"
-    />
-    <meta
-      property="og:description"
-      content="천안중고폰매입, 최고가 보장, 불필요한 차감 없이 명확한 안내, 천안 두정동 예쁜중고폰 "
-    />
-    <meta property="og:site_name" content="예쁜중고폰" />
-    <meta property="og:locale" content="ko_KR" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta name="title" content="천안 중고폰 매입 - 예쁜중고폰" />
-    <meta
-      name="description"
-      content="천안중고폰매입, 최고가 보장, 불필요한 차감 없이 명확한 안내, 천안 두정동 예쁜중고폰 "
-    />
-    <meta
-      name="keywords"
-      content="천안,중고폰,매입,아이폰,갤럭시,태블릿,박스폰,가개통,워치,최고가 매입,두정동,예쁜중고폰 "
-    />
-    <title>천안 중고폰 매입</title>
+<link rel="canonical" href="https://xn--299am38ap8d3qdvts.com/src/pages/buy" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://xn--299am38ap8d3qdvts.com/src/pages/buy" />
+<meta property="og:title" content="천안중고폰 매입 - 예쁜중고폰" />
+<meta property="og:image" content="https://xn--299am38ap8d3qdvts.com/src/img/ogimage.png"/>
+<meta property="og:description" content="천안중고폰 매입, 최고가 보장, 불필요한 차감 없이 명확한 안내, 천안 두정동 예쁜중고폰 " />
+<meta property="og:site_name" content="예쁜중고폰" />
+<meta property="og:locale" content="ko_KR" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+<meta name="title" content="천안중고폰 매입 - 예쁜중고폰" />
+<meta name="description" content="천안중고폰 매입, 최고가 보장, 불필요한 차감 없이 명확한 안내, 천안 두정동 예쁜중고폰 " />
+<meta name="keywords" content="천안,중고폰,매입,아이폰,갤럭시,태블릿,박스폰,가개통,워치,최고가 매입,두정동,예쁜중고폰 " />
+<title>천안중고폰 매입</title>
     <link rel="stylesheet" href="/src/css/styles.css" />
 
     <link rel="icon" href="/src/img/favicon2.ico" type="image/x-icon" />
