--- a/src/pages/sell.html
+++ b/src/pages/sell.html
@@ -4,36 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="canonical" href="https://예쁜중고폰.com/src/pages/sell" />
-
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://예쁜중고폰.com/src/pages/sell"
-    />
-    <meta property="og:title" content="천안 중고폰 판매 - 예쁜중고폰" />
-    <meta
-      property="og:image"
-      content="https://예쁜중고폰.com/src/img/ogimage.png"
-    />
-    <meta
-      property="og:description"
-      content="천안중고폰판매, 새것같은 중고폰 저렴하고 다양한 천안 두정동 예쁜중고폰"
-    />
-    <meta property="og:site_name" content="예쁜중고폰" />
-    <meta property="og:locale" content="ko_KR" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta name="title" content="천안 중고폰 판매 - 예쁜중고폰" />
-    <meta
-      name="description"
-      content="천안중고폰판매, 새것같은 중고폰 저렴하고 다양한 천안 두정동 예쁜중고폰""
-    />
-    <meta
-      name="keywords"
-      content="천안중고폰판매,두정동,중고폰,판매,최저가,S급,A급,B급,AS,교환,환불,두정동,예쁜중고폰"
-    />
-    <title>천안 중고폰 판매</title>
+<link rel="canonical" href="https://xn--299am38ap8d3qdvts.com/src/pages/sell" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://xn--299am38ap8d3qdvts.com/src/pages/sell" />
+<meta property="og:title" content="천안중고폰 판매 - 예쁜중고폰" />
+<meta property="og:image" content="https://xn--299am38ap8d3qdvts.com/src/img/ogimage.png" />
+<meta property="og:description" content="천안중고폰 판매, 새것같은 중고폰 저렴하고 다양한 천안 두정동 예쁜중고폰" />
+<meta property="og:site_name" content="예쁜중고폰" />
+<meta property="og:locale" content="ko_KR" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+<meta name="title" content="천안중고폰 판매 - 예쁜중고폰" />
+<meta name="description" content="천안중고폰 판매, 새것같은 중고폰 저렴하고 다양한 천안 두정동 예쁜중고폰" />
+<meta name="keywords" content="천안중고폰판매,두정동,중고폰,판매,최저가,S급,A급,B급,AS,교환,환불,두정동,예쁜중고폰" />
+<title>천안중고폰 판매</title>
     <link rel="stylesheet" href="/src/css/styles.css" />
 
     <link rel="icon" href="/src/img/favicon2.ico" type="image/x-icon" />
