--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <meta property="og:locale" content="ko_KR" />
 <meta property="og:url" content="https://xn--299am38ap8d3qdvts.com/" />
 <meta property="og:title" content="천안중고폰" />
-<meta property="og:description" content="천안중고폰 매입 즉시 입금, 판매 문제시 환불, 가개통/박스폰 매입, 선불폰, 알뜰폰, 천안 두정동 예쁜중고폰."/>
+<meta property="og:description" content="천안중고폰 매입 즉시 입금, 다양한 휴대폰 판매 문제시 환불, 가개통/박스폰 매입, 선불폰, 알뜰폰, 천안 두정동 예쁜중고폰."/>
 <meta property="og:site_name" content="천안중고폰" />
 <meta property="og:image" content="https://xn--299am38ap8d3qdvts.com/src/img/ogimage.png"/>
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
 <meta name="title" content="천안중고폰" />
-<meta name="description" content="천안중고폰 매입 즉시 입금, 판매 문제시 환불, 가개통/박스폰 매입, 선불폰, 알뜰폰, 천안 두정동 예쁜중고폰."/>
+<meta name="description" content="천안중고폰 매입 즉시 입금, 다양한 휴대폰 판매 문제시 환불, 가개통/박스폰 매입, 선불폰, 알뜰폰, 천안 두정동 예쁜중고폰."/>
 <meta name="keywords" content="천안중고폰, 천안중고폰매입, 천안중고폰판매, 천안선불폰, 천안알뜰폰, 중고핸드폰, 중고스마트폰, 중고휴대폰, 핸드폰수리, 갤럭시, 아이폰, 박스폰, 가개통, 자급제, 선불폰, 알뜰폰, 두정동중고폰"/>
 
     <!-- Google Tag Manager -->
