--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
         <!-- Box 2 -->
         <div>
           <img src="/src/img/sec1/vsto.png" alt="예쁜중고폰과 타 천안 중고폰 업체의 비교 요약, 
-          예쁜중고폰은 무조건 즉시 입금, 넓은 주차장 완비, 불필요한 차감없임, 40~50대 다양하게 진열 후 판매, 구매하신 후 문제시 100% 환불" style="width: 95%" margin: auto; display: block; />
+          예쁜중고폰은 무조건 즉시 입금, 넓은 주차장 완비, 불필요한 차감없음음, 40~50대 다양하게 진열 후 판매, 구매하신 후 문제시 100% 환불" style="width: 95%" margin: auto; display: block; />
         </div>
       </div>
     </section>
