--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <li><a href="/src/pages/buy">중고폰 매입</a></li>
             <li><a href="/src/pages/sell">중고폰 판매</a></li>
             <li><a href="/src/pages/prepaid">알뜰/선불폰</a></li>
-		    <li><a href="/src/pages/datarecover">데이터복구</a></li>
+		    <li><a href="/src/pages/datarecover">데이터 복구</a></li>
             <li><a href="https://pf.kakao.com/_xeaKNG/chat/">카톡 채팅 상담</a></li>
             <li><a href="https://talk.naver.com/ct/w5t762">네이버 톡톡 상담</a></li>
               </ul>
@@ -118,7 +118,7 @@
               <li><a class="header__menu__text" href="/src/pages/buy">중고폰 매입</a></li>
                <li><a class="header__menu__text" href="/src/pages/sell">중고폰 판매</a></li>
               <li><a class="header__menu__text" href="/src/pages/prepaid">알뜰/선불폰</a></li>
-			  <li><a class="header__menu__text" href="/src/pages/datarecover">데이터복구구</a></li>
+			  <li><a class="header__menu__text" href="/src/pages/datarecover">데이터 복구</a></li>
       
               <li
                 style="
